# gate-game

./: CMakeLists.txt  README.md
res/save/: save.txt
src/: Engine.cpp  Engine.h  main.cpp
src/GUI/: AutoMenu.cpp  AutoMenu.h  Button.cpp  Button.h  CustomText.h  GuiElement.h  HorizontalLayer.h  VerticalLayer.h  Widget.cpp  Widget.h
src/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/StateManager/: StatePlaying.cpp  StatePlaying.h  StateSlate.h
src/Utils/: FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  NonCopyable.h  NonMoveable.h  SaveData.h
